--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bank-landing",
   "version": "0.1.0",
+  "homepage": "https://r4aya4r.github.io/BankLanding/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
